# fisher-kolmogorov-marenostrum5

./: CMakeLists.txt  README.md  slurmcomp.sh  slurmex.sh
data/: params.csv
src/3d/: DiffusionType.hpp  FisherKolmogorov3d.cpp  FisherKolmogorov3d.hpp  simulation3d.cpp
